	  counts, rendered the channel status grid looking weird. Additionally, this helps the Qt
	  layout calculator to work correctly with a high-dpi UI scaling on some systems.
	* Fixed the standard MIDI file player occasionally failing to send all-sound-off sequence
	  when stopping playback; also, ensured that all played MIDI events get processed. (#80)

2021-05-22:

	1.9.0 released.

	* Updated mt32emu library to version 2.5.1.
	* Added support for partial bitwise ROM dumps (#56). Now, the synth can operate with
	  a pair of control ROM files and a pair of PCM ROM files, which are merged when needed.
	* Reworked ROMSelectionDialog to permit selection of multiple ROM files of each type
	  and to support known machine configurations to simplify ROM selection.
	* Added a new option to the main menu to permit a choice whether to show native system
	  file selection dialogs or internal dialogs provided by Qt. This may become in handy in
	  case the native dialogs lack some functions or exhibit unwanted behaviour otherwise.

2021-01-17:

	1.8.0 released.

	* Added mode "Hide to tray on close". When enabled, the application does not exit when the user closes the main window.
	  To exit the application, the corresponding menu items can be used in menu "Tools" and the tray icon menu.
	* Added possibility to select output device on macOS with the CoreAudio driver.
	* Reworked internal MIDI message routing and buffering in case multiple MIDI streams are attached to a single (pinned)
	  synth, so that the resulting stream supplied to the synth contains MIDI messages ordered by their timestamp frame-wise.
	  This improves the timing accuracy to the best possible extent.
	* Added support for integration with the JACK audio kit. Now the application may serve as one or more JACK clients
	  providing either a single MIDI input port, a pair of output audio ports, or a combined synth client with the input